Fixed java heap problem due to no filter in include descendants, include ancestors etc queries